// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.providers.k3d;

option go_package = "namespacelabs.dev/foundation/internal/providers/k3d";

message Configuration {
    string registry_container_name = 1;
    string cluster_name            = 2;
}
